third_party/move/move-compiler-v2/tests/checking/variants/variants_parse_err2.exp

Diagnostics:
error: unexpected token
  ┌─ tests/checking/variants/variants_parse_err2.move:5:12
  │
5 │         red: u64
  │            ^
  │            │
  │            Unexpected ':'
  │            Expected ','
