third_party/move/move-compiler-v2/tests/checking/variants/variants_parse_err2.move
module 0x815::m {
    use 0x815::m;

    enum ColorMissingVariants {
        red: u64
    }
}
